refatora o código de testes, ajustando a inicialização de widgets e melhorando a legibilidade, além de atualizar a lógica de tratamento de erros e a formatação de variáveis em diversos arquivos de teste

--- a/lib/modules/common/shared/strings/common_de.arb
+++ b/lib/modules/common/shared/strings/common_de.arb
@@ -13,6 +13,7 @@
   "whereYouLive": "Wo wohnen Sie?",
   "privacyPolicy1": "Mit der Speicherung Ihrer Daten erklären Sie sich mit unserer",
   "privacyPolicy2": "Datenschutzerklärung einverstanden.",
+  "privacyPolicy": "https://www.eumedito.org/en/privacy-policy/",
   "exitApp": "App beenden",
   "dateBirth": "Geburtsdatum",
   "datePickerLocation": "de_DE",
