--- a/lib/modules/common/shared/strings/common_es.arb
+++ b/lib/modules/common/shared/strings/common_es.arb
@@ -13,6 +13,7 @@
   "whereYouLive": "Dónde reside",
   "privacyPolicy1": "Al guardar sus datos usted acepta nuestras ",
   "privacyPolicy2": "Políticas de Privacidad",
+  "privacyPolicy": "https://www.eumedito.org/es/politica-de-privacidad/",
   "exitApp": "SALIR DE LA APP",
   "dateBirth": "Fecha de Nacimiento",
   "datePickerLocation": "es_ES",
