--- a/lib/modules/common/shared/strings/common_it.arb
+++ b/lib/modules/common/shared/strings/common_it.arb
@@ -13,6 +13,7 @@
   "whereYouLive": "Dove vivi?",
   "privacyPolicy1": "Salvando i tuoi dati acconsenti al nostro ",
   "privacyPolicy2": "politica sulla riservatezza",
+  "privacyPolicy": "https://www.eumedito.org/it/privacy-policy/",
   "exitApp": "esci dall'app",
   "dateBirth": "data di nascita",
   "datePickerLocation": "it_IT",
