--- a/lib/modules/common/shared/strings/common_pt.arb
+++ b/lib/modules/common/shared/strings/common_pt.arb
@@ -13,6 +13,7 @@
   "whereYouLive": "Onde Reside",
   "privacyPolicy1": "Ao salvar os seus dados você concorda com a nossa ",
   "privacyPolicy2": "Política de Privacidade",
+  "privacyPolicy": "https://www.eumedito.org/politica-de-privacidade/",
   "exitApp": "SAIR DO APP",
   "dateBirth": "Data de Nascimento",
   "datePickerLocation": "pt_BR",
